finish showcase area

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark pt-4">
         <div class="container">
-            <a href="#" class="navbar-brand">Frontend Bootcamp</a>
+            <a href="#" class="navbar-brand">Coding Bootcamp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
+            <div class="collapse navbar-collapse " id="navmenu">
+                <ul class="navbar-nav ms-auto text-center">
                     <li class="nav-item">
                         <a href="#learn" class="nav-link">
                             What You'll Learn
@@ -43,16 +43,18 @@
     </nav>
 
     <!-- Showcase -->
-<section class="bg-dark text-light p-5 text-center">
-    <div class="container">
-        <div class="d-md-flex">
-            <div>
-                <h1>Become a Web Developer</h1>
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
+        <div class="container">
+            <div class="d-lg-flex">
+                <div >
+                    <h1>Become a <span class="text-warning">Web Developer</span> </h1>
+                    <p class="lead my-4">Become invaluable in our tech-driven world. Showcase your coding and collaboration skills to potential employers, build confidence with mock technical interview preparation.</p>
+                    <button class="btn btn-primary btn-lg mb-4">Enrol now!</button>
+                </div>
+                <img class="img-fluid w-50 d-none d-lg-block px-3" src="./img/web-dev.jpeg" alt="">
             </div>
-            <img class="img-fluid w-50" src="./img/web-dev.jpeg" alt="">
         </div>
-    </div>
-</section>
+    </section>
 
     Hello
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
