--- a/index.html
+++ b/index.html
@@ -48,15 +48,33 @@
             <div class="d-lg-flex">
                 <div>
                     <h1>Become a <span class="text-warning">Web Developer</span> </h1>
-                    <p class="lead my-4">Become invaluable in our tech-driven world. Showcase your coding and collaboration skills to potential employers, build confidence with mock technical interview preparation.</p>
-                    <button class="btn btn-primary btn-lg mb-4">Enrol now!</button>
+                    <p class="lead my-4">Become invaluable in our tech-driven world. Showcase your coding and
+                        collaboration skills to potential employers and build confidence with mock technical interview
+                        preparation.</p>
+                    <button class="btn btn-primary btn-lg mb-4">Enrol Now</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-lg-block px-5" src="./img/web-dev.jpeg" alt="">
             </div>
         </div>
     </section>
 
-    Hello
+    <!--Newsletter-->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mx-3 mb-md-0 text-nowrap">Sign Up For Our News Letter</h3>
+                <div class="input-group news-input mx-3">
+                <input type="text" class="form-control" 
+                placeholder="Enter Email">
+                <button class="btn btn-dark btn-lg" type="button" id="button">Button</button>
+            </div>
+            </div>
+            
+        </div>
+
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
