--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <section class="bg-primary text-light p-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3 mx-3 mb-md-0 text-nowrap">Sign Up For Our News Letter</h3>
-                <div class="input-group news-input mx-3">
+                <h3 class="mb-3  mb-md-0 text-nowrap">Sign Up For Our News Letter</h3>
+                <div class="input-group news-input">
                 <input type="text" class="form-control" 
                 placeholder="Enter Email">
                 <button class="btn btn-dark btn-lg" type="button" id="button">Button</button>
