--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+
     <title>Frontend Bootcamp</title>
 
 </head>
@@ -64,15 +66,66 @@
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3  mb-md-0 text-nowrap">Sign Up For Our News Letter</h3>
                 <div class="input-group news-input">
-                <input type="text" class="form-control" 
-                placeholder="Enter Email">
-                <button class="btn btn-dark btn-lg" type="button" id="button">Button</button>
+                    <input type="text" class="form-control" placeholder="Enter Email">
+                    <button class="btn btn-dark btn-lg" type="button" id="button">Button</button>
+                </div>
             </div>
-            </div>
-            
         </div>
-
     </section>
+
+    <!--Boxes-->
+    <section class="p-5">
+        <div class="container ">
+            <div class="row text-center">
+                <div class="col-md">
+                    <div class="card bg-dark text-light p-3 pb-1">
+                        <div class="card-body text-center">
+                            <div class="h2 mb-3">
+                                <i class="bi bi-laptop"></i>
+                                <h3 class="card-title mb-3">Virtual</h3>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
+                                </p>
+                                <a href="#" class="btn btn-primary p-3 mt-2">Read More</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-secondary text-light p-3 pb-1">
+                        <div class="card-body text-center">
+                            <div class="h2 mb-3">
+                                <i class="bi bi-person-square"></i>
+                                <h3 class="card-title mb-3">Hybrid</h3>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
+                                </p>
+                                <a href="#" class="btn btn-dark p-3 mt-2">Read More</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light p-3 pb-1">
+                        <div class="card-body text-center">
+                            <div class="h2 mb-3">
+                                <i class="bi bi-people"></i>
+                                <h3 class="card-title mb-3">In Person</h3>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
+                                </p>
+                                <a href="#" class="btn btn-primary p-3 mt-2">Read More</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
