--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!--Boxes-->
     <section class="p-5">
         <div class="container ">
-            <div class="row text-center">
+            <div class="row text-center g-4">
                 <div class="col-md">
                     <div class="card bg-dark text-light p-3 pb-1">
                         <div class="card-body text-center">
@@ -123,6 +123,56 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+<!--Info section-->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md ">
+                    <img src="./img/web-development.webp" class="img-fluid" alt="">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn The Fundamentals</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae labore incidunt enim
+                        officiis tempora nihil dolorum excepturi. Est aliquam illum in. Rerum itaque fuga consequuntur
+                        velit porro aliquam quos repellendus.</p>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quae commodi iusto quos dicta
+                        aspernatur vitae porro reiciendis similique, repellat magnam incidunt aliquam, numquam
+                        repellendus tempora ratione praesentium quas debitis!</p>
+                    <a href="#" class="btn btn-dark mt-3">
+                        <i class="bi bi-chevron-right">Read More</i>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                
+                <div class="col-md p-5">
+                    <h2>Web Development</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae labore incidunt enim
+                        officiis tempora nihil dolorum excepturi. Est aliquam illum in. Rerum itaque fuga consequuntur
+                        velit porro aliquam quos repellendus.</p>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quae commodi iusto quos dicta
+                        aspernatur vitae porro reiciendis similique, repellat magnam incidunt aliquam, numquam
+                        repellendus tempora ratione praesentium quas debitis!</p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right">Read More</i>
+                    </a>
+
+                </div>
+                <div class="col-md">
+                    <img src="./img/fundamental.webp" class="img-fluid" alt="">
+                </div>
+            </div>
+
         </div>
     </section>
 
