--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark pt-4">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">Coding Bootcamp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -30,13 +30,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#questions" class="nav-link">
-                            Questions
+                        <a href="#FAQ" class="nav-link">
+                            FAQ
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#instructors" class="nav-link">
-                            Instructors
+                        <a href="#Contact" class="nav-link">
+                            Contact
                         </a>
                     </li>
                 </ul>
@@ -64,7 +64,7 @@
     <section class="bg-primary text-light p-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3  mb-md-0 text-nowrap">Sign Up For Our News Letter</h3>
+                <h3 class="mb-3  mb-md-0 text-nowrap">Sign Up For Our Newsletter</h3>
                 <div class="input-group news-input">
                     <input type="text" class="form-control" placeholder="Enter Email">
                     <button class="btn btn-dark btn-lg" type="button" id="button">Button</button>
@@ -86,7 +86,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
                                 </p>
-                                <a href="#" class="btn btn-primary p-3 mt-2">Read More</a>
+                                <a href="#" class="btn btn-primary p-2 mt-2">Read More</a>
                             </div>
 
                         </div>
@@ -101,7 +101,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
                                 </p>
-                                <a href="#" class="btn btn-dark p-3 mt-2">Read More</a>
+                                <a href="#" class="btn btn-dark p-2 mt-2">Read More</a>
                             </div>
 
                         </div>
@@ -116,7 +116,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae.
                                 </p>
-                                <a href="#" class="btn btn-primary p-3 mt-2">Read More</a>
+                                <a href="#" class="btn btn-primary p-2 mt-2">Read More</a>
                             </div>
 
                         </div>
@@ -141,7 +141,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quae commodi iusto quos dicta
                         aspernatur vitae porro reiciendis similique, repellat magnam incidunt aliquam, numquam
                         repellendus tempora ratione praesentium quas debitis!</p>
-                    <a href="#" class="btn btn-dark mt-3">
+                    <a href="#" class="btn btn-secondary mt-3">
                         <i class="bi bi-chevron-right">Read More</i>
                     </a>
 
