finish map area

--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
     <!--location-->
     <section class="p-5">
         <div class="container">
-            <div class="row g-4">
+            <div class="row g-5">
                 <div class="col-md">
                     <h2 class="text-center mb-4">Our Campus</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">
-                            <span class="fw-bold">Location</span> 333 Kensingtoon Street, Melbourne VIC 3000
+                            <span class="fw-bold">Location</span> 3 Yarra Street, Melbourne VIC 3000
                         </li>
                         <li class="list-group-item">
                             <span class="fw-bold">Office Hours</span> 9.00AM - 5.00PM, Monday to Friday
@@ -369,32 +369,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md">
-                    <div>
-                        <div class="mapouter" id="map">
-                            <div class="gmap_canvas"><iframe width="500px" height="400px" id="gmap_canvas"
-                                    src="https://maps.google.com/maps?q=3%20yarra%20street%20south%20yarra&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                                    href="https://fmovies-online.net"></a><br>
-                                <style>
-                                    .mapouter {
-                                        position: relative;
-                                        text-align: right;
-                                        height: 400px;
-                                        width: 500px;
-                                    }
-                                </style><a href="https://www.embedgooglemap.net">google map code for website</a>
-                                <style>
-                                    .gmap_canvas {
-                                        overflow: hidden;
-                                        background: none !important;
-                                        height: 400px;
-                                        width: 500px;
-                                    }
-                                </style>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md"  >
+                    <iframe id="map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/search?q=3%20Yarra%20Street%2C%20South%20Yarra%20VIC%2C%20Australia&key=AIzaSyA65uRSLPgf4hpqEm4gmFabMJTOm1UYIY0"></iframe>
                 </div>
             </div>
         </div>
