add location id

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#locations" class="nav-link">
+                        <a href="#location" class="nav-link">
                             Locations
                         </a>
                     </li>
@@ -350,13 +350,13 @@
     </section>
     <!--location-->
     <section class="p-5">
-        <div class="container">
+        <div class="container" id="location">
             <div class="row g-5">
                 <div class="col-md">
                     <h2 class="text-center mb-4">Our Campus</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">
-                            <span class="fw-bold">Location</span> 3 Yarra Street, Melbourne VIC 3000
+                            <span class="fw-bold">Location</span> 3 Yarra Street, South Yarra VIC 3141
                         </li>
                         <li class="list-group-item">
                             <span class="fw-bold">Office Hours</span> 9.00AM - 5.00PM, Monday to Friday
@@ -375,6 +375,9 @@
             </div>
         </div>
     </section>
+<!--Footer-->
+<!--Enrolment Modal-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
