--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <p class="lead my-4">Become invaluable in our tech-driven world. Showcase your coding and
                         collaboration skills to potential employers and build confidence with mock technical interview
                         preparation.</p>
-                    <button class="btn btn-primary btn-lg mb-4" data-bs-toggle="modal" data-bs-target="#enrol">Enrol Now</button>
+                    <button class="btn btn-primary btn-lg mb-4" data-bs-toggle="modal" data-bs-target="#enrol">Enrol
+                        Now</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-lg-block px-5" src="./img/web-dev.jpeg" alt="">
             </div>
@@ -387,48 +388,50 @@
     </footer>
 
     <!--Enrolment Modal-->
-    <div class="modal fade" id="enrol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="enrol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Coding Bootcamp Enrolment Form</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true">
-                
-              </button>
-            </div>
-            <div class="modal-body">
-                <h4>Please fill out this form, our student success representative will contact you soon.</h4>
-              <form>
-                  
-                <div class="form-group">
-                  <label for="first-name" class="col-form-label">First Name</label>
-                  <input type="text" class="form-control" id="applicant-first-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Coding Bootcamp Enrolment Form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                        aria-hidden="true">
+
+                    </button>
                 </div>
-                <div class="form-group">
-                    <label for="last-name" class="col-form-label">Last Name</label>
-                    <input type="text" class="form-control" id="applicant-last-name">
-                  </div>
-                <div class="form-group">
-                    <label for="email" class="col-form-label">Email</label>
-                    <input type="text" class="form-control" id="applicant-email">
-                  </div>
-                  <div class="form-group">
-                    <label for="phone-number" class="col-form-label">Phone Number</label>
-                    <input type="text" class="form-control" id="applicant-phone-number">
-                  </div>
-                <div class="form-group">
-                  <label for="message-text" class="col-form-label">Message</label>
-                  <textarea class="form-control" id="message-text"></textarea>
+                <div class="modal-body">
+                    <h4>Please fill out this form, our student success representative will contact you soon.</h4>
+                    <form>
+
+                        <div class="form-group">
+                            <label for="first-name" class="col-form-label">First Name</label>
+                            <input type="text" class="form-control" id="applicant-first-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="last-name" class="col-form-label">Last Name</label>
+                            <input type="text" class="form-control" id="applicant-last-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="col-form-label">Email</label>
+                            <input type="text" class="form-control" id="applicant-email">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone-number" class="col-form-label">Phone Number</label>
+                            <input type="text" class="form-control" id="applicant-phone-number">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Submit</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
